UPD: reworked sleep-and-fetch
